--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@next/font": "^14.2.15",
+    "framer-motion": "^12.4.3",
     "next": "^15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tw-elements-react": "^1.0.0-alpha-end"
+    "react-icons": "^5.4.0",
+    "tw-elements-react": "^1.0.0-alpha-end",
+    "tw-neumorphism": "^0.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
