--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@next/font": "^14.2.15",
+    "chart.js": "^4.4.7",
     "framer-motion": "^12.4.3",
     "next": "^15.1.2",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "tw-elements-react": "^1.0.0-alpha-end",
