--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "^14.2.15",
     "chart.js": "^4.4.7",
     "framer-motion": "^12.4.3",
+    "lucide-react": "^0.475.0",
     "next": "^15.1.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
