--- a/package.json
+++ b/package.json
@@ -9,15 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.5",
+    "@mui/lab": "^6.0.0-beta.28",
+    "@mui/material": "^6.4.5",
+    "@mui/styled-engine-sc": "^6.4.3",
     "@next/font": "^14.2.15",
     "chart.js": "^4.4.7",
     "framer-motion": "^12.4.3",
+    "igniteui-react": "^18.7.7",
+    "igniteui-react-charts": "^18.7.7",
+    "igniteui-react-core": "^18.7.7",
+    "igniteui-react-excel": "^18.7.7",
+    "igniteui-react-gauges": "^18.7.7",
+    "igniteui-react-grids": "^18.7.7",
+    "igniteui-react-maps": "^18.7.7",
+    "igniteui-react-spreadsheet": "^18.7.7",
     "lucide-react": "^0.475.0",
     "next": "^15.1.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-vertical-timeline-component": "^3.5.3",
+    "styled-components": "^6.1.15",
     "tw-elements-react": "^1.0.0-alpha-end",
     "tw-neumorphism": "^0.2.0"
   },
