--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^6.4.5",
     "@mui/styled-engine-sc": "^6.4.3",
     "@next/font": "^14.2.15",
+    "@pqina/flip": "^1.8.4",
+    "@rumess/react-flip-countdown": "^1.2.6",
     "chart.js": "^4.4.7",
     "framer-motion": "^12.4.3",
     "igniteui-react": "^18.7.7",
@@ -30,6 +32,7 @@
     "next": "^15.1.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-confetti": "^6.2.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-vertical-timeline-component": "^3.5.3",
