--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-confetti": "^6.2.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-latex-next": "^3.0.0",
     "react-vertical-timeline-component": "^3.5.3",
     "styled-components": "^6.1.15",
     "tw-elements-react": "^1.0.0-alpha-end",
