--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "igniteui-react-grids": "^18.7.7",
     "igniteui-react-maps": "^18.7.7",
     "igniteui-react-spreadsheet": "^18.7.7",
+    "katex": "^0.16.21",
     "lucide-react": "^0.475.0",
     "next": "^15.1.2",
     "react": "^19.0.0",
@@ -33,7 +34,7 @@
     "react-confetti": "^6.2.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-latex-next": "^3.0.0",
+    "react-katex": "^3.0.1",
     "react-vertical-timeline-component": "^3.5.3",
     "styled-components": "^6.1.15",
     "tw-elements-react": "^1.0.0-alpha-end",
