--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "igniteui-react-spreadsheet": "^18.7.7",
     "katex": "^0.16.21",
     "lucide-react": "^0.475.0",
+    "mathjax-full": "^3.2.2",
     "next": "^15.1.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
