--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "katex": "^0.16.21",
     "lucide-react": "^0.475.0",
     "mathjax-full": "^3.2.2",
-    "next": "^15.2.0",
+    "next": "^15.3.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.2.3",
@@ -40,13 +40,13 @@
     "tw-neumorphism": "^0.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "20.17.32",
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "5.8.3"
   }
 }
